@@ -1329,7 +1329,7 @@ static zbx_uint64_t	DBget_nextid(const char *tablename, int num)
 	while (FAIL == found)
 	{
 		/* avoid eternal loop within failed transaction */
-		if (0 < txn_level && 0 != txn_error)
+		if (0 < zbx_db_txn_level() && 0 != zbx_db_txn_error())
 		{
 			zabbix_log(LOG_LEVEL_DEBUG, "End of %s() transaction failed", __function_name);
 			return 0;
@@ -2183,5 +2183,10 @@ void	DBfree_history(char **h_value)
 
 int	DBtxn_status()
 {
-	return 0 != txn_error ? FAIL : SUCCEED;
+	return 0 == zbx_db_txn_error() ? SUCCEED : FAIL;
+}
+
+int	DBtxn_ongoing()
+{
+	return 0 == zbx_db_txn_level() ? FAIL : SUCCEED;
 }
